--- a/StarterCode/Belly_Button_Biodiversity/templates/index.html
+++ b/StarterCode/Belly_Button_Biodiversity/templates/index.html
@@ -28,7 +28,7 @@
           <div class="panel-heading">
             <h3 class="panel-title">Sample MetaData</h3>
           </div>
-          <div id="sample-metadata" class="panel-body"></div>
+          <div id="sample-metadata" class="panel-body"></div> <!--BOOKMARK THIS ROW FOR app.js-->
         </div>
       </div>
       <div class="col-md-5">
